[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://SternersHouse.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/organicpencil.splitscreen/splitscreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/backgrounds/background1.png" type="Texture" id=5]
[ext_resource path="res://RedPlanet.tscn" type="PackedScene" id=6]
[ext_resource path="res://PurplePlanet.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://Assets/sfx/bump1.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/sfx/ambience.wav" type="AudioStream" id=11]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_energy = 16.0
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.99
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 1, 0.901961, 0.701961, 1 )
fog_depth_begin = 25.0
fog_depth_end = 35.0
dof_blur_far_distance = 20.0
dof_blur_far_transition = 10.0
glow_levels/1 = true
glow_intensity = 0.2
glow_strength = 1.67
glow_blend_mode = 1
glow_hdr_scale = 1.83

[node name="Main" type="Spatial"]
script = ExtResource( 8 )

[node name="Splitscreen" parent="." instance=ExtResource( 4 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.92858, 0.662287, 3.23 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="RedPlanet" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5026, 12.7261, 5.16714 )

[node name="PurplePlanet" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.62313, 13.9857, 6.14524 )

[node name="Sounds" type="Spatial" parent="."]

[node name="GameOverMusic" type="AudioStreamPlayer" parent="Sounds"]

[node name="VictoryMusic" type="AudioStreamPlayer" parent="Sounds"]

[node name="AudioStreamPlayer_Generic" type="AudioStreamPlayer" parent="Sounds"]

[node name="AudioBump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.923451, 0.166174, 0.345867, 0.15378, -0.665539, 0.730349, 0.351553, 0.727629, 0.589039, -1.29142, 6.00791, -6.90629 )
shadow_enabled = true

[node name="AudioAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AmbienceTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SternersHouse" parent="." instance=ExtResource( 2 )]

[node name="HudTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AmbienceTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HudTimer" to="." method="_on_HudTimer_timeout"]
